--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,365 +1,111 @@
-/* importing google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+body {
+    background-color: rgb(87, 139, 185);
 }
-
-body{
-    background: #e8e9eb;
-}
-
-
-.start_btn,
-.info_box,
-.quiz_box,
-.result_box{
+#wrapper {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
-                0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+    left: 30%;
+     top: 20%;
+     width: 500px;
+     height: 500px;
+     background-color: aliceblue;
+     border: 1px solid rgb(255, 255, 255);
+     text-align: center;
 
-
-.info_box.activeInfo,
-.quiz_box.activeQuiz,
-.result_box.activeResult{
-    opacity: 1;
-    z-index: 5;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.start_btn button{
-    font-size: 25px;
-    font-weight: 500;
-    color: #ffffff;
-    padding: 15px 30px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    background: rgb(67, 113, 94);
-    cursor: pointer;
-}
-
-.info_box{
-    width: 540px;
-    background: #5d8d73;
-    border-radius: 5px;
-    transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
-}
-
-.info_box .info-title{
-    height: 60px;
-    width: 100%;
-    border-bottom: 1px solid lightgrey;
-    display: flex;
-    align-items: center;
-    padding: 0 30px;
-    border-radius: 5px 5px 0 0;
+ }
+ #startTime {
+    background-color: rgb(250, 248, 250);
+    background-color:rgb(87, 139, 185);
+    width: 100px 100px;
+    margin-left: 33%;
+    padding: 5px 5px;
     font-size: 20px;
-    font-weight: 600;
-}
-
-.info_box .info-list{
-    padding: 15px 30px;
-}
-
-.info_box .info-list .info{
-    margin: 5px 0;
-    font-size: 17px;
-}
-
-.info_box .buttons button{
-    margin: 0 5px;
-    height: 40px;
-    width: 100px;
-    font-size: 16px;
-    font-weight: 500;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid #5d8d73;
-   
-}
-
-.quiz_box{
-    width: 550px;
-    background: rgb(254, 254, 254);
-    border-radius: 5px;
-    transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
-}
-
-.quiz_box header{
-    position: relative;
-    z-index: 2;
-    height: 70px;
-    padding: 0 30px;
-    background: #5d8d73;
-    border-radius: 5px 5px 0 0;
-    display: flex;
+    color: white;
+    border-radius: 12px;
     align-items: center;
-    justify-content: space-between;
-    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
-}
-
-.quiz_box header .title{
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.quiz_box header .timer{
-    color: #5d8d73;
-    background: #ffffff;
-    border: 1px solid #5d8d73;
-    height: 45px;
-    padding: 0 8px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 145px;
-}
-
-.quiz_box header .timer .time_left_txt{
-    font-weight: 400;
-    font-size: 17px;
-    user-select: none;
-}
-
-.quiz_box header .timer .timer_sec{
-    font-size: 18px;
-    font-weight: 500;
-    height: 30px;
-    width: 45px;
-    color: #fff;
-    border-radius: 5px;
-    line-height: 30px;
-    text-align: center;
-    background: #343a40;
-    border: 1px solid #343a40;
-    user-select: none;
-}
-
-.quiz_box header .time_line{
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    height: 3px;
-    background: #f8f8f8;
+  
 }
 
 
-section{
-    padding: 25px 30px 20px 30px;
-    background: #fff;
-}
+ #questionsDiv {
+     margin: 20px;
+ }
 
-section .que_text{
-    font-size: 25px;
-    font-weight: 600;
-}
+ #questionsDiv p {
+     font-size: 15px;
+     text-align: center;
+ }
 
-section .option_list{
-    padding: 20px 0px;
-    display: block;   
-}
+ #currentTime {
+     float: left;
+     font-size: 50px;
+     color: white;
+     width: 100px;
+     height: 100px;
+ }
 
-section .option_list .option{
-    background: rgb(220, 224, 227);
-    border: 1px solid #5d8d73;
-    border-radius: 5px;
-    padding: 8px 15px;
-    font-size: 17px;
-    margin-bottom: 15px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-section .option_list .option:last-child{
-    margin-bottom: 0px;
-}
-
-section .option_list .option:hover{
-    color: #70a68b;
-    background: #cce5ff;
-    border: 1px solid #b8daff;
-}
-
-section .option_list .option.correct{
-    color: #155724;
-    background: #d4edda;
-    border: 1px solid #c3e6cb;
-}
-
-section .option_list .option.incorrect{
-    color: #721c24;
-    background: #f8d7da;
-    border: 1px solid #f5c6cb;
-}
+ #goBack {
+     background-color: purple;
+     background-color: grey;
+     position: relative;
+     padding: 10px;
+     font-size: 20px;
+    color: white;
+    top: 30%;
+    left: 55%;
+     width: auto;
+     text-align: center;
+     text-decoration: none;
+     border-radius: 12px;
+ }
 
 
-section .option_list .option .icon{
-    height: 26px;
-    width: 26px;
-    border: 2px solid transparent;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 13px;
-    pointer-events: none;
-    transition: all 0.3s ease;
-    line-height: 24px;
+ button {
+ 
+    border-radius: 8px;
 }
-.option_list .option .icon.tick{
-    color: #23903c;
-    border-color: #23903c;
-    background: #d4edda;
+textarea {
+    width: 90%;
+    margin: 20px;
+ }
+
+ #Submit {
+     background-color:rgb(87, 139, 185);
+     background-color: grey;
+     margin-left: 33%;
+     padding: 15px 32px;
+     font-size: 20px;
+     color: white;
+     border-radius: 12px;
+ }
+
+ label {
+    margin-right: 10px;
+}
+input {
+    margin-bottom: 20px;
+    width: 50%;
+    border: 1px solid lightgray;
 }
 
-.option_list .option .icon.cross{
-    color: #a42834;
-    background: #f8d7da;
-    border-color: #a42834;
-}
+ h1 {
+     text-align: center;
+     font-size: 45px;
+     text-decoration: underline;
+ }
 
-footer{
-    height: 60px;
-    padding: 0 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid lightgrey;
-}
+ li {
+     background-color:rgb(255, 255, 255);
+     background-color:rgb(87, 139, 185);
+     margin-top: 10px;
+     padding: 5px 15px;
+     width: 80%;
+     font-size: 18px;
+     color: white;
+     border-radius: 12px;
+ }
 
-footer .total_que span{
-    display: flex;
-    user-select: none;
-}
-
-footer .total_que span p{
-    font-weight: 500;
-    padding: 0 5px;
-}
-
-footer .total_que span p:first-child{
-    padding-left: 0px;
-}
-
-footer button{
-    height: 40px;
-    padding: 0 13px;
-    font-size: 18px;
-    font-weight: 400;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: #5d8d73;
-    border-radius: 5px;
-    background: #ffffff;
-    border: 1px solid #ffffff;
-    line-height: 10px;
-    opacity: 0;
-    pointer-events: none;
-    transform: scale(0.95);
-    transition: all 0.3s ease;
-}
-
-footer button:hover{
-    background: #5d8d73;
-}
-
-footer button.show{
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
-}
-
-.result_box{
-    background: #5d8d73;
-    border-radius: 5px;
-    display: flex;
-    padding: 25px 30px;
-    width: 450px;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
-}
-
-.result_box .icon{
-    font-size: 100px;
-    color: #5d8d73;
-    margin-bottom: 10px;
-}
-
-.result_box .complete_text{
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.result_box .score_text span{
-    display: flex;
-    margin: 10px 0;
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.result_box .score_text span p{
-    padding: 0 4px;
-    font-weight: 600;
-}
-
-.result_box .buttons{
-    display: flex;
-    margin: 20px 0;
-}
-
-.result_box .buttons button{
-    margin: 0 10px;
-    height: 45px;
-    padding: 0 20px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid #5d8d73;
-    transition: all 0.3s ease;
-}
-
-.buttons button.restart{
-    color: #5d8d73;
-    background: #ffffff;
-}
-
-.buttons button.restart:hover{
-    background: #a4a6a8;
-}
-
-.buttons button.quit{
-    color: #5d8d73;
-    background: #fff;
-}
-
-.buttons button.quit:hover{
-    color: #fff;
-    background: #a4a6a8;
-}
+ #createDiv {
+     margin-top: 20px;
+     border-top: 1px solid lightgray;
+     border-radius: 12px;
+ }        
